--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="plus">+</string>
+    <string name="first">first</string>
+    <string name="second">second</string>
+    <string name="third">third</string>
 </resources>
